cluster/apps/teleport/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: teleport
  namespace: teleport
  annotations:
    # Automatically generate TLS certificate
    kubernetes.io/tls-acme: "true"
spec:
  ingressClassName: traefik
  rules:
  - host: teleport.arsenikki.xyz
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: 
            port: 
              number: 443
  tls:
  - hosts:
    - teleport.arsenikki.xyz
    secretName: teleport-tls
